# s0009d-lab-env

./: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  cmake_install.cmake  gitignore  workspace.code-workspace
engine/: CMakeLists.txt  config.cc  config.h
engine/core/: CMakeLists.txt  app.cc  app.h
engine/render/: CMakeLists.txt  window.cc  window.h
exts/: CMakeLists.txt
exts/glew/: CMakeLists.txt
exts/imgui/: imgui.cpp  stb_rect_pack.h
exts/imgui/examples/: .gitignore  README.txt
exts/imgui/examples/allegro5_example/: README.md  imgui_impl_a5.cpp  imgui_impl_a5.h  main.cpp
exts/imgui/examples/directx10_example/: directx10_example.vcxproj  directx10_example.vcxproj.filters  imgui_impl_dx10.cpp  imgui_impl_dx10.h  main.cpp
exts/imgui/examples/directx11_example/: directx11_example.vcxproj  directx11_example.vcxproj.filters  imgui_impl_dx11.cpp  main.cpp
exts/imgui/examples/directx9_example/: directx9_example.vcxproj  directx9_example.vcxproj.filters  imgui_impl_dx9.cpp  imgui_impl_dx9.h  main.cpp
exts/imgui/examples/marmalade_example/: imgui_impl_marmalade.cpp  imgui_impl_marmalade.h  main.cpp
exts/imgui/examples/null_example/: main.cpp
exts/imgui/examples/opengl2_example/: Makefile  imgui_impl_glfw_gl2.cpp  imgui_impl_glfw_gl2.h  main.cpp  opengl2_example.vcxproj  opengl2_example.vcxproj.filters
exts/imgui/examples/opengl3_example/: Makefile  imgui_impl_glfw_gl3.cpp  main.cpp  opengl3_example.vcxproj  opengl3_example.vcxproj.filters
exts/imgui/examples/sdl_opengl2_example/: README.md  build_win32.bat  imgui_impl_sdl_gl2.cpp  imgui_impl_sdl_gl2.h  main.cpp
exts/imgui/examples/sdl_opengl3_example/: Makefile  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h  main.cpp
exts/imgui/examples/vulkan_example/: main.cpp  (+2 more)
exts/nanovg/: README.md
projects/: FileScript.sh
projects/GLSL/: CMakeLists.txt
projects/GLSL/code/: GLSL.cpp  GLSL.h
projects/GLSL/shaders/: model.glsl  phong.glsl
projects/LinuxAssignment/: CMakeLists.txt
projects/LinuxAssignment/code/: FileScript.sh  HardwareSpecs.cpp  HardwareSpecs.h  HardwareSpecs.hpp  SceneLoader.cc  SceneLoader.h  stb_image.h  tiny_gltf.h
projects/MathLib/: CMakeLists.txt
projects/MathLib/code/: CMath.h  CString.h  Matrix4x4.h  Vector2.h  Vector3.h  Vector4.h  withoutmecmakecries.cpp
projects/RealTimeEngine/: CMakeLists.txt
projects/RealTimeEngine/code/: Application.cpp  Application.h  Camera.cpp  Camera.h  LightNode.cpp  LightNode.h  LightNode.hpp  Model.cpp  Model.h  RealTimeEngine.cpp  Screen.h  SoftwareRenderer.cpp  SoftwareRenderer.h  Transform.cpp  Transform.h  Transform.hpp
projects/RealTimeEngine/models/Fox/: readme.txt
projects/Resource/: CMakeLists.txt
projects/Resource/code/: Material.h  Material.hpp  MaterialResource.cpp  MaterialResource.h  MaterialResource.hpp  MeshResource.cpp  MeshResource.h  MeshResource.hpp  Shader.cpp  Shader.h  Shader.hpp  Texture.h  TextureResource.cpp  TextureResource.h  VBOTrimmer.cc  VBOTrimmer.cpp  VBOTrimmer.h  VBOTrimmer.hpp  Vertex.h
(+6 files in other folders)
